--- a/index.html
+++ b/index.html
@@ -3,71 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./pages/index.css">
-    <link rel="stylesheet" href="./vendor/normalize.css">
     <title>Место</title>
 </head>
 <body class="page">
     <header class="header">
-        <img src="./img4/Vector.svg" alt="Лого" class="header__logo">
-        <div class="header__line"></div>
+        <img src="./images/Vector.svg" alt="Лого" class="header__logo">
     </header>
 
-    <main>
+    <main class="content">
         <section class="profile">
-            <img src="./img4/Avatar2.jpg" alt="фото" class="profile__avatar">
-            <ul class="profile__info">
-                <li><h1 class="profile__name">Жак-Ив Кусто</h1></li>
-                <li><button class="link profile__info-edit" type="button"></button></li>
-                <li><p class="profile__profession">Исследователь океана</p></li>
-            </ul>
-            <button class="link profile__info-add" type="button"></button>
+            <img src="./images/Avatar2.jpg" alt="фото" class="profile__avatar">
+            <div class="profile__info">
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <button aria-label="Перейти к изменению профеля" class="link profile__info-edit" type="button"></button>
+                <p class="profile__profession">Исследователь океана</p>
+            </div>
+            <button aria-label="Перейти к добавлению информации" class="link profile__info-add" type="button"></button>
         </section>
 
         <section class="elements">
-            <ul class="element">
-                <li><img src="./img4/abrauDurso.jpg" alt="озеро" class="element__mask-group"></li>
-                <li class="element__group">
+            <article class="element">
+                <img src="./images/abrauDurso.jpg" alt="озеро" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Озеро Абрау</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
-            <ul class="element">
-                <li><img src="./img4/kareliaKiji.jpg" alt="храм" class="element__mask-group"></li>
-                <li class="element__group">
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
+            <article class="element">
+                <img src="./images/kareliaKiji.jpg" alt="храм" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Республика Карелия</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
-            <ul class="element">
-                <li><img src="./img4/palaceKhan.jpg" alt="дворец" class="element__mask-group"></li>
-                <li class="element__group">
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
+            <article class="element">
+                <img src="./images/palaceKhan.jpg" alt="дворец" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Бахчисарай</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
-            <ul class="element">
-                <li><img src="./img4/russkyIsl.jpg" alt="остров" class="element__mask-group"></li>
-                <li class="element__group">
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
+            <article class="element">
+                <img src="./images/russkyIsl.jpg" alt="остров" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Остров Русский</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
-            <ul class="element">
-                <li><img src="./img4/sevastopolM.jpg" alt="маяк" class="element__mask-group"></li>
-                <li class="element__group">
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
+            <article class="element">
+                <img src="./images/sevastopolM.jpg" alt="маяк" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Севастополь</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
-            <ul class="element">
-                <li><img src="./img4/sheregesh.jpg" alt="горы" class="element__mask-group"></li>
-                <li class="element__group">
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
+            <article class="element">
+                <img src="./images/sheregesh.jpg" alt="горы" class="element__mask-group">
+                <div class="element__group">
                     <h2 class="element__location">Шерегеш</h2>
-                    <img src="./img4/cuore1.svg" alt="лайк" class="element__like">
-                </li>
-            </ul>
+                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
+                </div>
+            </article>
         </section>
     </main>
 
@@ -77,15 +74,13 @@
 
     <div class="popup">
         <div class="popup__form">
-            <form class="popup__content">
+            <form name="myForm" class="popup__content">
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <input type="text" class="popup__name">
-                <div class="popup__line"></div>
-                <input type="text" class="popup__profession">
-                <div class="popup__line"></div>
-                <button class="popup__save popup__text" type="submit">Сохранить</button>
+                <input name="profileName" type="text" class="popup__element popup__element_name">
+                <input name="profileProfession" type="text" class="popup__element popup__element_profession">
+                <button class="popup__save" type="submit">Сохранить</button>
             </form>
-            <button class="link popup__close" type="button"></button>
+            <button aria-label="Закрыть окно" class="link popup__close" type="button"></button>
         </div>
     </div>
 
