--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
     <div class="popup">
         <div class="popup__form">
+            <button aria-label="Закрыть окно" class="link popup__close" type="button"></button>
             <form name="myForm" class="popup__content">
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <input name="profileName" type="text" class="popup__element popup__element_name">
-                <input name="profileProfession" type="text" class="popup__element popup__element_profession">
+                <input name="profileName" type="text" class="popup__element popup__element_add_name">
+                <input name="profileProfession" type="text" class="popup__element popup__element_add_profession">
                 <button class="popup__save" type="submit">Сохранить</button>
             </form>
-            <button aria-label="Закрыть окно" class="link popup__close" type="button"></button>
         </div>
     </div>
 
