--- a/index.html
+++ b/index.html
@@ -7,83 +7,75 @@
     <title>Место</title>
 </head>
 <body class="page">
-    <header class="header">
-        <img src="./images/Vector.svg" alt="Лого" class="header__logo">
-    </header>
+<header class="header">
+    <img src="./images/Vector.svg" alt="Лого" class="header__logo">
+</header>
 
-    <main class="content">
-        <section class="profile">
-            <img src="./images/Avatar2.jpg" alt="фото" class="profile__avatar">
-            <div class="profile__info">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button aria-label="Перейти к изменению профеля" class="link profile__info-edit" type="button"></button>
-                <p class="profile__profession">Исследователь океана</p>
-            </div>
-            <button aria-label="Перейти к добавлению информации" class="link profile__info-add" type="button"></button>
-        </section>
-
-        <section class="elements">
-            <article class="element">
-                <img src="./images/abrauDurso.jpg" alt="озеро" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Озеро Абрау</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-            <article class="element">
-                <img src="./images/kareliaKiji.jpg" alt="храм" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Республика Карелия</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-            <article class="element">
-                <img src="./images/palaceKhan.jpg" alt="дворец" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Бахчисарай</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-            <article class="element">
-                <img src="./images/russkyIsl.jpg" alt="остров" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Остров Русский</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-            <article class="element">
-                <img src="./images/sevastopolM.jpg" alt="маяк" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Севастополь</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-            <article class="element">
-                <img src="./images/sheregesh.jpg" alt="горы" class="element__mask-group">
-                <div class="element__group">
-                    <h2 class="element__location">Шерегеш</h2>
-                    <button aria-label="Отметить фото" class="element__like" type="button"></button>
-                </div>
-            </article>
-        </section>
-    </main>
-
-    <footer>
-        <p class="footer">&copy;2022. Mesto Russia</p>
-    </footer>
-
-    <div class="popup">
-        <div class="popup__form">
-            <button aria-label="Закрыть окно" class="link popup__close" type="button"></button>
-            <form name="myForm" class="popup__content">
-                <h3 class="popup__title">Редактировать профиль</h3>
-                <input name="profileName" type="text" class="popup__element popup__element_add_name">
-                <input name="profileProfession" type="text" class="popup__element popup__element_add_profession">
-                <button class="popup__save" type="submit">Сохранить</button>
-            </form>
+<main class="content">
+    <section class="profile">
+        <img src="./images/Avatar2.jpg" alt="фото" class="profile__avatar">
+        <div class="profile__info">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button aria-label="Перейти к изменению профеля" class="link profile__info-edit" type="button"></button>
+            <p class="profile__profession">Исследователь океана</p>
         </div>
-    </div>
+        <button aria-label="Перейти к добавлению информации" class="link profile__info-add" type="button"></button>
+    </section>
 
-    <script src="scripts/script2.js"></script>
+    <section class="elements">
+
+    </section>
+</main>
+
+<footer>
+    <p class="footer">&copy;2022. Mesto Russia</p>
+</footer>
+
+<div class="popup popup_profile">
+    <div class="popup__form">
+        <button aria-label="Закрыть окно" class="link popup__close popup__close_profile" type="button"></button>
+        <form name="myForm" class="popup__content">
+            <h3 class="popup__title">Редактировать профиль</h3>
+            <input name="profileName" type="text" class="popup__element popup__element_add_name">
+            <input name="profileProfession" type="text" class="popup__element popup__element_add_profession">
+            <button class="popup__save" type="submit">Сохранить</button>
+        </form>
+    </div>
+</div>
+
+<div class="popup popup_location">
+    <div class="popup__form">
+        <button aria-label="Закрыть окно" class="link popup__close popup__close_location" type="button"></button>
+        <form name="myForm" class="popup__content popup__content_location">
+            <h3 class="popup__title">Новое место</h3>
+            <input placeholder="Название" name="locationName" type="text" class="popup__element popup__element_add_heading">
+            <input placeholder="Ссылка на картинку" name="locationLink" type="url" class="popup__element popup__element_add_link">
+            <button class="popup__save" type="submit">Создать</button>
+        </form>
+    </div>
+</div>
+
+<div class="popup popup_mask-group">
+    <div class="popup__group">
+        <button aria-label="Закрыть окно" class="link popup__close popup__close_profile" type="button"></button>
+        <form name="myForm" class="popup__content-group">
+            <img class="popup__mask-popup">
+            <h2 class="popup__location">Место</h2>
+        </form>
+    </div>
+</div>
+
+<template class="template">
+    <article class="element">
+        <button aria-label="Удалить карточку" class="link element__remove" type="button"></button>
+        <img class="element__mask-group">
+        <div class="element__group">
+            <h2 class="element__location"></h2>
+            <button aria-label="Отметить фото" class="element__like" type="button"></button>
+        </div>
+    </article>
+</template>
+
+<script src="scripts/script2.js"></script>
 </body>
 </html>
