--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
 <div class="popup popup_mask-group">
     <div class="popup__group">
-        <button aria-label="Закрыть окно" class="link popup__close popup__close_profile" type="button"></button>
+        <button aria-label="Закрыть окно" class="link popup__close popup__close_image" type="button"></button>
         <form name="myForm" class="popup__content-group">
-            <img class="popup__mask-popup">
-            <h2 class="popup__location">Место</h2>
+            <img class="popup__mask-image">
+            <h2 class="popup__location-name"></h2>
         </form>
     </div>
 </div>
