--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="popup__group">
         <button aria-label="Закрыть окно" class="link popup__close popup__close_image" type="button"></button>
         <form name="myForm" class="popup__content-group">
-            <img class="popup__mask-image">
+            <img src="-" alt="-" class="popup__mask-image">
             <h2 class="popup__location-name"></h2>
         </form>
     </div>
@@ -68,7 +68,7 @@
 <template class="template">
     <article class="element">
         <button aria-label="Удалить карточку" class="link element__remove" type="button"></button>
-        <img class="element__mask-group">
+        <img src=" " alt=" " class="element__mask-group">
         <div class="element__group">
             <h2 class="element__location"></h2>
             <button aria-label="Отметить фото" class="element__like" type="button"></button>
