--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <button aria-label="Закрыть окно" class="link popup__close popup__close_profile" type="button"></button>
         <form name="myForm" class="popup__content">
             <h3 class="popup__title">Редактировать профиль</h3>
-            <input name="profileName" type="text" class="popup__element popup__element_add_name">
-            <input name="profileProfession" type="text" class="popup__element popup__element_add_profession">
+            <input placeholder="Имя" name="profileName" type="text" class="popup__element popup__element_add_name">
+            <input placeholder="Профессия" name="profileProfession" type="text" class="popup__element popup__element_add_profession">
             <button class="popup__save" type="submit">Сохранить</button>
         </form>
     </div>
@@ -76,6 +76,7 @@
     </article>
 </template>
 
-<script src="scripts/script2.js"></script>
+<script src="scripts/cards.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
