--- a/index.html
+++ b/index.html
@@ -36,24 +36,28 @@
         <button aria-label="Закрыть окно" class="link popup__close popup__close_profile" type="button"></button>
         <form name="myForm" novalidate class="popup__content popup__content_profile">
             <h3 class="popup__title">Редактировать профиль</h3>
-            <input type="text"
-                   id="profileName-input"
-                   required
-                   minlength="2"
-                   maxlength="40"
-                   placeholder="Имя"
-                   name="profileName"
-                   class="popup__element popup__element_profile popup__element_add_name">
-            <span class="popup__name_error" id="profileName-input-error"></span>
-            <input type="text"
-                   id="profileProfession-input"
-                   required
-                   minlength="2"
-                   maxlength="200"
-                   placeholder="Профессия"
-                   name="profileProfession"
-                   class="popup__element popup__element_profile popup__element_add_profession">
-            <span class="popup__profession_error" id="profileProfession-error"></span>
+            <lebel class="popup__indent">
+                <input type="text"
+                       id="profileName-input"
+                       required
+                       minlength="2"
+                       maxlength="40"
+                       placeholder="Имя"
+                       name="profileName"
+                       class="popup__element popup__element_profile popup__element_add_name">
+                <span class="popup__error" id="profileName-input-error"></span>
+            </lebel>
+            <lebel class="popup__indent">
+                <input type="text"
+                       id="profileProfession-input"
+                       required
+                       minlength="2"
+                       maxlength="200"
+                       placeholder="Профессия"
+                       name="profileProfession"
+                       class="popup__element popup__element_profile popup__element_add_profession">
+                <span class="popup__error" id="profileProfession-input-error"></span>
+            </lebel>
             <button class="popup__save popup__save_profile" type="submit">Сохранить</button>
         </form>
     </div>
@@ -64,22 +68,26 @@
         <button aria-label="Закрыть окно" class="link popup__close popup__close_location" type="button"></button>
         <form name="myForm" novalidate class="popup__content popup__content_location">
             <h3 class="popup__title">Новое место</h3>
-            <input type="text"
-                   id="name-input"
-                   required
-                   minlength="2"
-                   maxlength="30"
-                   placeholder="Название"
-                   name="locationName"
-                   class="popup__element popup__element_add_heading">
-            <span class="popup__error" id="name-input-error"></span>
-            <input type="url"
-                   id="link-input"
-                   required
-                   placeholder="Ссылка на картинку"
-                   name="locationLink"
-                   class="popup__element popup__element_add_link">
-            <span class="popup__error" id="link-input-error"></span>
+            <lebel class="popup__indent">
+                <input type="text"
+                       id="name-input"
+                       required
+                       minlength="2"
+                       maxlength="30"
+                       placeholder="Название"
+                       name="locationName"
+                       class="popup__element popup__element_location popup__element_add_heading">
+                <span class="popup__error" id="name-input-error"></span>
+            </lebel>
+            <lebel class="popup__indent">
+                <input type="url"
+                       id="link-input"
+                       required
+                       placeholder="Ссылка на картинку"
+                       name="locationLink"
+                       class="popup__element popup__element_location popup__element_add_link">
+                <span class="popup__error" id="link-input-error"></span>
+            </lebel>
             <button class="popup__save popup__save_location" type="submit">Создать</button>
         </form>
     </div>
