--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
     </article>
 </template>
 
-<!--<script type="module" src="scripts/Card.js"></script>-->
-<!--<script type="module" src="scripts/utils.js"></script>-->
-<script src="scripts/validate.js"></script>
-<script src="scripts/cards.js"></script>
-<script src="scripts/script.js"></script>
+<script type="module" src="scripts/Card.js"></script>
+<script type="module" src="scripts/utils.js"></script>
+<script type="module" src="scripts/index.js"></script>
+<script type="module" src="scripts/FormValidator.js"></script>
 </body>
 </html>
