Проектная работа 9 (Profile)

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <section class="profile">
         <img src="<%=require('./images/Avatar2.jpg')%>" alt="фото" class="profile__avatar">
         <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name">Жак-Ив</h1>
             <button aria-label="Перейти к изменению профеля" class="link profile__info-edit" type="button"></button>
             <p class="profile__profession">Исследователь океана</p>
         </div>
